first edit, made login state, and removed some extra tabs

--- a/www/templates/browse.html
+++ b/www/templates/browse.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Browse Books" hide-back-button="true">
+<ion-view view-title="My New Project Name" hide-back-button="true">
     <ion-content>
         <ion-list>
             <div ng-repeat="book in books track by $index" class="row responsive-sm" ng-if="$index % 2 == 0">
