--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -13,9 +13,9 @@
     <ion-pane ng-show="viewLogin">
         <ion-header-bar>
             <h1 class="title">Login</h1>
-            <div class="buttons">
+            <!--<div class="buttons">
                 <button class="button button-assertive" ng-click="hide()">Close</button>
-            </div>
+            </div>-->
         </ion-header-bar>
         <ion-content>
             <form>
@@ -39,9 +39,9 @@
     <ion-pane ng-hide="viewLogin">
         <ion-header-bar>
             <h1 class="title">Register</h1>
-            <div class="buttons">
+            <!--<div class="buttons">
                 <button class="button button-assertive" ng-click="hide()">Close</button>
-            </div>
+            </div>-->
         </ion-header-bar>
         <ion-content>
             <form>
