--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,12 +23,12 @@
         <ion-content>
             <ion-list>
                 <ion-item menu-close href="#/app/browse">
-                    Browse Books
+                    Search
                 </ion-item>
                 <ion-item menu-close href="#/app/cart">
-                    My Cart
+                    Tickets
                 </ion-item>
-                <ion-item menu-close href="#/app/purchases">
+                <!--<ion-item menu-close href="#/app/purchases">
                     My Purchases
                 </ion-item>
                 <ion-item menu-close ng-show="isAuthenticated" ng-click="logout()">
@@ -36,7 +36,7 @@
                 </ion-item>
                 <ion-item menu-close ng-hide="isAuthenticated" ng-click="loginFromMenu()">
                     Login
-                </ion-item>
+                </ion-item>-->
             </ion-list>
         </ion-content>
     </ion-side-menu>
