made an angularjs factory that stores data in local storage of browser

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -10,8 +10,8 @@
             <ion-nav-buttons side="right">
                 <!-- <button ng-show="isAuthenticated" class="button button-icon button-clear ion-unlocked" ng-click="logout()">
                 </button> -->
-                <a class="button button-icon button-clear ion-android-cart" href="#/app/cart">
-                </a>
+                <!--<a class="button button-icon button-clear ion-android-cart" href="#/app/cart">
+                </a>-->
             </ion-nav-buttons>
         </ion-nav-bar>
         <ion-nav-view name="menuContent"></ion-nav-view>
@@ -30,11 +30,11 @@
                 </ion-item>
                 <!--<ion-item menu-close href="#/app/purchases">
                     My Purchases
-                </ion-item>
+                </ion-item>-->
                 <ion-item menu-close ng-show="isAuthenticated" ng-click="logout()">
                     Logout
                 </ion-item>
-                <ion-item menu-close ng-hide="isAuthenticated" ng-click="loginFromMenu()">
+                <!--<ion-item menu-close ng-hide="isAuthenticated" ng-click="loginFromMenu()">
                     Login
                 </ion-item>-->
             </ion-list>
