login on side menu

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -34,9 +34,9 @@
                 <ion-item menu-close ng-show="isAuthenticated" ng-click="logout()">
                     Logout
                 </ion-item>
-                <!--<ion-item menu-close ng-hide="isAuthenticated" ng-click="loginFromMenu()">
+                <ion-item menu-close ng-hide="isAuthenticated" href="#/login">
                     Login
-                </ion-item>-->
+                </ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
