--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -22,10 +22,10 @@
         </ion-header-bar>
         <ion-content>
             <ion-list>
-                <ion-item menu-close href="#/app/browse">
+                <ion-item menu-close href="#/app/search">
                     Search
                 </ion-item>
-                <ion-item menu-close href="#/app/cart">
+                <ion-item menu-close href="#/app/ticket">
                     Tickets
                 </ion-item>
                 <!--<ion-item menu-close href="#/app/purchases">
