--- a/www/css/style.css
+++ b/www/css/style.css
@@ -20,3 +20,31 @@
     position: absolute;
     right: 5px;
 }
+
+.search input{
+    background: #f7f9fb;
+    display: inline;
+    width: 75%;
+    margin: 5px;
+}
+
+.search-button{
+    width: 75px;
+    min-height:20px;
+    color: white;
+    background-color: #e42012;
+    position: relative;
+    display: inline-block;
+    margin-top: 5px;
+    padding: 0 12px;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 2px;
+    vertical-align: top;
+    text-align: center;
+    text-overflow: ellipsis;
+    font-size: 16px;
+    line-height: 32px;
+    cursor: pointer;
+
+}
