ticket purchase working

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -34,7 +34,7 @@
                 <ion-item menu-close ng-show="isAuthenticated" ng-click="logout()">
                     Logout
                 </ion-item>
-                <ion-item menu-close ng-hide="isAuthenticated" href="#/login">
+                <ion-item menu-close ng-hide="isAuthenticated" ng-click="login()">
                     Login
                 </ion-item>
             </ion-list>
