--- a/www/templates/purchase.html
+++ b/www/templates/purchase.html
@@ -6,8 +6,8 @@
         <h1 class="title">Ticket Purchase</h1>
     </ion-header-bar>
     <ion-content>
-        <div class="list card" ng-click="gotoDetail(spectacle)">
-            <div class="item">
+        <div class="list card" >
+            <div class="item" ng-click="gotoDetail(spectacle)">
                 <h2>Name : {{::spectacle.name}}</h2>
                 <p>Date : {{::spectacle.date | date:'medium'}}</p>
                 <p>Location : {{::spectacle.location}}</p>
