--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,4 +1,4 @@
-<ion-view view-title="My New Project Name" hide-back-button="true">
+<ion-view view-title="AMM spectacle store" hide-back-button="true">
 
 
     <ion-content>
