--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -15,6 +15,9 @@
                         <p>
                             Tickets purchased : {{::show.totalTickets}}
                         </p>
+                        <p>
+                            Total Cost : {{::show.totalCost |number:2 }}
+                        </p>
                     </div>
                 </ion-item>
             </div>
