--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -8,7 +8,7 @@
                     <div class="item-thumbnail-left">
                         <img ng-src="{{::show.photo}}">
                         <h2>{{::show.name}}</h2>
-                        <p>{{::show.date | date : medium}}</p>
+                        <p>{{::show.date | date : 'medium'}}</p>
                         <p>
                             {{::show.location}}
                         </p>
