html files comments translated to PT

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -9,7 +9,7 @@
             </a>
         </div>
     </div>
-    <!-- login pane -->
+    <!-- login -->
     <ion-pane ng-show="viewLogin">
         <ion-header-bar>
             <h1 class="title">Login</h1>
@@ -35,7 +35,7 @@
             </form>
         </ion-content>
     </ion-pane>
-    <!-- register pane -->
+    <!-- registo -->
     <ion-pane ng-hide="viewLogin">
         <ion-header-bar>
             <h1 class="title">Register</h1>
