--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,9 +1,9 @@
-<ion-view view-title="AMM spectacle store (Search)" hide-back-button="true">
+<ion-view view-title="AMM Spectacle Store - Search" hide-back-button="true">
 
 
     <ion-content>
         <div class="search">
-            <input type="text" placeholder="Search Shows" ng-model="string">
+            <input type="text" placeholder="Search" ng-model="string">
             <span class="search"><button class="search-button" ng-click="searchList(string)">Search</button></span>
         </div>
         <ion-list>
