--- a/www/templates/ticket.html
+++ b/www/templates/ticket.html
@@ -1,4 +1,4 @@
-<ion-view view-title="AMM spectacle store (Tickets)" hide-back-button="true">
+<ion-view view-title="AMM spectacle store - Tickets" hide-back-button="true">
 
     <ion-content>
 
